plugins {
    application
    id("java")
    id("com.gradleup.shadow") version "9.4.1"
    id("org.owasp.dependencycheck") version "12.2.1"
}

group = "org.camelia.studio.kiss.shot.acerola"
version = "1.0.0"
application {
    mainClass = "org.camelia.studio.kiss.shot.acerola.KissShotAcerola"
}
repositories {
    mavenCentral()
    maven { setUrl("https://jitpack.io") }
}

dependencies {
    implementation("club.minnced:jdave-api:0.1.8")

    // Compiled natives for libdave for the specified platform
    implementation("club.minnced:jdave-native-linux-x86-64:0.1.8")
    implementation("club.minnced:jdave-native-linux-aarch64:0.1.8")
    implementation("club.minnced:jdave-native-win-x86-64:0.1.8")
    implementation("club.minnced:jdave-native-darwin:0.1.8")
    implementation("org.hibernate.orm:hibernate-core:7.3.1.Final")
    implementation("org.hibernate.orm:hibernate-hikaricp:7.3.1.Final")
    implementation("org.postgresql:postgresql:42.7.10")
    implementation("io.github.cdimascio:dotenv-kotlin:6.5.1")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.21.2")
    implementation("net.dv8tion:JDA:6.4.1")
    implementation("ch.qos.logback:logback-classic:1.5.32")
    implementation("dev.arbjerg:lavaplayer:2.2.6")
    implementation("jakarta.annotation:jakarta.annotation-api:3.0.0")

    testImplementation("org.junit.jupiter:junit-jupiter:5.11.4")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}


tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

tasks.test {
    useJUnitPlatform()
}

tasks.named<Jar>("shadowJar") {
    manifest {
        attributes["Main-Class"] = "org.camelia.studio.kiss.shot.acerola.KissShotAcerola"
    }

    archiveFileName.set("kiss-shot-acerola.jar")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
